clusters/beryjuio-home/gravity/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravity
  namespace: gravity
  annotations:
    metallb.io/address-pool: gravity-pool
    metallb.io/allow-shared-ip: gravity
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gravity
  ports:
    - port: 8008
      name: http
      targetPort: 8008
    - port: 8009
      name: http-metrics
      targetPort: 8009
