clusters/beryjuio-home/gravity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravity
  namespace: gravity
spec:
  ingressClassName: istio
  rules:
    - host: gravity.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: gravity
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gravity.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-gravity
